# VirtualPartners

./: .gitignore  CMakeLists - 副本.txt  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  HELP.md  PetWindow.cpp  PetWindow.h  QtInstallerFrame_VirtualPartners.pro  README.md  README.zh.md  SettingsWindow.cpp  SettingsWindow.h  VERSION.md  VirtualPartners.pro  config.h  docker-compose.yml  main.cpp  setup.2.0.iss  setup.6.8.1.iss  setup.6.8.2.iss  setup.iss  setup.y.iss
config/: config.xml
doc/: ChatAPI-help.md  docker-help.md  docker-tar-help.md  help-for-linux.md  mint-help.md
